--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@ pre {
           <section class='col-xs-12 col-sm-6 col-md-6'>
             <section>
               <h2>How to use this example application</h2>
-                <p>For instrutions on how to use this application with OpenShift, start with reading the <a href="http://docs.openshift.org/latest/dev_guide/templates.html#using-the-quickstart-templates">Developer Guide</a>.</p>
+                <p>For instructions on how to use this application with OpenShift, start by reading the <a href="http://docs.openshift.org/latest/dev_guide/templates.html#using-the-quickstart-templates">Developer Guide</a>.</p>
 
               <h2>Deploying code changes</h2>
                 <p>
@@ -251,28 +251,38 @@ $ git push</pre>
 
                   <h3>Expanding on sample app</h3>
                   <p>
-                  In order to access the example blog application, you have to remove the
-                  public/index.html file which serves as the welcome page. Other option is to make a
-                  request directly to `/articles` which will give you access to the blog example.
+                  This app also includes a sample blogging implementation. 
                   </p>
                   <p>
-                  It will also be necessary to update your application to talk to your database back-end.  The <code>config/database.yml</code> file used by rails was set up in such a way that it will accept environment variables for your connection information that you pass to it.
-                  Once an administrator has created a PostgreSQL database service for you to connect with you can add the following environment variables to your deploymentConfig to ensure all your frontend pods have access to these environment variables.
-                  Note: the rails-postgresql.json template creates the DB service and environment variables for you.
+                  In order to access the example blog application, you have to remove the
+                  public/index.html file which serves as the welcome page. Another option is to make a
+                  request directly to `/articles` which will give you access to the blog example.  If you did not modify the APPLICATION_USER
+                  and APPLICATION_PASSWORD parameter values in the template, then the default login/password is openshift/secret.                  
+                  </p>
+                  <p>
+                  It will also be necessary to define a database service for the application to use.  The <code>config/database.yml</code> file used by rails was set up in such a way that it will accept environment variables for database connection information.  After creating a PostgreSQL database service in your project, you can add the following environment variables to your deploymentConfig to ensure all your frontend pods have access to these environment variables.
+                  Note: the rails-postgresql.json template creates the database service and environment variables for you.
 
 <pre>
-osc env dc/frontend DATABASE_SERVICE_NAME=&lt;database service name&gt;
-osc env dc/frontend &lt;DATABASE_SERVICE_NAME&gt;_SERVICE_HOST=&lt;database service ip&gt;
-osc env dc/frontend &lt;DATABASE_SERVICE_NAME&gt;_SERVICE_PORT=&lt;database service port&gt;
-osc env dc/frontend POSTGRESQL_DATABASE=&lt;your created database&gt;
-osc env dc/frontend POSTGRESQL_USER=&lt;your database user&gt;
-osc env dc/frontend POSTGRESQL_PASSWORD=&lt;your database user's password&gt;
+oc env dc/rails-frontend DATABASE_SERVICE_NAME=&lt;database service name&gt;
+oc env dc/rails-frontend &lt;DATABASE_SERVICE_NAME&gt;_SERVICE_HOST=&lt;database service ip&gt;
+oc env dc/rails-frontend &lt;DATABASE_SERVICE_NAME&gt;_SERVICE_PORT=&lt;database service port&gt;
+oc env dc/rails-frontend POSTGRESQL_DATABASE=&lt;your created database&gt;
+oc env dc/rails-frontend POSTGRESQL_USER=&lt;your database user&gt;
+oc env dc/rails-frontend POSTGRESQL_PASSWORD=&lt;your database user's password&gt;
 </pre>
                   </p>
                   <p>
                   Note: If the database service is created in the same project as the frontend pod,
                   the *_SERVICE_HOST and *_SERVICE_PORT environment variables will be automatically
                   created.
+                  </p>
+                  <p>
+                  You will need to redeploy your application in order to pick up the new environment variables.  You can force a deployment
+                  by running:
+<pre>
+oc deploy rails-frontend --latest
+</pre>
                   </p>
 
             </section>
